@@ -2,43 +2,108 @@
 
 if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You are not allowed to call this page directly.'); }
 
-global $wpdb;
+class nggManageAlbum {
+	
+	/**
+	 * The selected album ID
+	 *
+	 * @since 1.3.0
+	 * @access privat
+	 * @var int
+	 */
+	var $currentID = 0;
+	
+	/**
+	 * The array for the galleries
+	 *
+	 * @since 1.3.0
+	 * @access privat
+	 * @var array
+	 */
+	var $galleries = false;	
 
-function nggallery_admin_manage_album()  {
-	global $wpdb;
+	/**
+	 * The array for the albums
+	 *
+	 * @since 1.3.0
+	 * @access privat
+	 * @var array
+	 */
+	var $albums = false;	
+
+	/**
+	 * PHP4 compatibility layer for calling the PHP5 constructor.
+	 * 
+	 */
+	function nggManageAlbum() {
+		return $this->__construct();
+	}
+
+	/**
+	 * Init the album output
+	 * 
+	 */	
+	function __construct() {
+		return true;
+	}
 	
-	$albumID = isset($_POST['act_album']) ? (int) $_POST['act_album'] : 0 ;
+	function controller() {
+		global $nggdb;
+	
+		$this->currentID = isset($_POST['act_album']) ? (int) $_POST['act_album'] : 0 ;
+	
+		if (isset ($_POST['update']) || isset( $_POST['delete'] ) || isset( $_POST['add'] ) )
+			$this->processor();
 		
-	if ($_POST['update']){
+		// get first all galleries & albums
+		$this->albums = $nggdb->find_all_album();
+		$this->galleries  = $nggdb->find_all_galleries();	
+		
+		$this->output();	
 	
+	}
+	
+	function processor() {
+		global $wpdb;
+		
 		check_admin_referer('ngg_album');
-		
-		if (isset($_POST['update']) && $_POST['update']) { 
+	
+		if ( isset($_POST['add']) && isset ($_POST['newalbum']) ) { 
 			$newalbum = attribute_escape($_POST['newalbum']);
 			$result = $wpdb->query("INSERT INTO $wpdb->nggalbum (name, sortorder) VALUES ('$newalbum','0')");
-			if ($result) nggGallery::show_message(__('Update Successfully','nggallery'));
+			if ($result) 
+				nggGallery::show_message(__('Update Successfully','nggallery'));
 		} 
 		
-		if ($albumID > 0){
+		if ( isset($_POST['update']) && ($this->currentID > 0) ) {
+
 			// get variable galleryContainer 
 			parse_str($_POST['sortorder']); 
 			if (is_array($gid)){ 
 				$serial_sort = serialize($gid); 
-				$wpdb->query("UPDATE $wpdb->nggalbum SET sortorder = '$serial_sort' WHERE id = $albumID ");
+				$wpdb->query("UPDATE $wpdb->nggalbum SET sortorder = '$serial_sort' WHERE id = $this->currentID ");
 			} else {
-				$wpdb->query("UPDATE $wpdb->nggalbum SET sortorder = '0' WHERE id = $albumID ");
+				$wpdb->query("UPDATE $wpdb->nggalbum SET sortorder = '0' WHERE id = $this->currentID ");
 			}
 			nggGallery::show_message(__('Update Successfully','nggallery'));
-		} 
+
+		}
+		
+		if ( isset($_POST['delete']) ) {
+	
+			$result = nggdb::delete_album( $this->currentID );
+			if ($result) 
+				nggGallery::show_message(__('Album deleted','nggallery'));
+		}
+		
 	}
 	
-	if (isset($_POST['delete']) && $_POST['delete']) {
-		check_admin_referer('ngg_album');
+	function output() {
+		
+	global $nggdb;
 
-		$result = nggdb::delete_album($albumID);
-		if ($result) 
-			nggGallery::show_message(__('Album deleted','nggallery'));
-	}
+	//TODO:Code MUST be optimized, how to flag a used gallery better ?
+	$used_list = $this->get_used_galleries();
 	
 ?>
 
@@ -55,7 +120,7 @@ jQuery(document).ready(
 			tolerance: 'intersect',
 			distance: 2,
 			forcePlaceholderSize: true ,
-			connectWith: ["#galleryContainer"] 
+			connectWith: '#galleryContainer' 
 		} );
 
 		jQuery('#galleryContainer').sortable( {
@@ -65,7 +130,17 @@ jQuery(document).ready(
 			tolerance: 'intersect',
 			distance: 2,
 			forcePlaceholderSize: true ,
-			connectWith: ["#selectContainer"] 
+			connectWith: ['#selectContainer', '#albumContainer'] 
+		} );
+
+		jQuery('#albumContainer').sortable( {
+			items: '.groupItem',
+			placeholder: 'sort_placeholder',
+			opacity: 0.7,
+			tolerance: 'intersect',
+			distance: 2,
+			forcePlaceholderSize: true ,
+			connectWith: '#galleryContainer'
 		} );
 		
 		jQuery('a.min').bind('click', toggleContent);
@@ -123,6 +198,7 @@ function ngg_serialize(s)
 	jQuery('input[name=sortorder]').val(serial);
 }
 </script>
+
 <div class="wrap album" id="wrap" >
 	<h2><?php _e('Manage Albums', 'nggallery') ?></h2>
 	<form id="selectalbum" method="POST" onsubmit="ngg_serialize()" accept-charset="utf-8">
@@ -134,155 +210,212 @@ function ngg_serialize(s)
 				<select id="act_album" name="act_album" onchange="this.form.submit();">
 					<option value="0" ><?php _e('No album selected', 'nggallery') ?></option>
 					<?php
-						$albumlist = $wpdb->get_results("SELECT * FROM $wpdb->nggalbum ORDER BY id ASC");
-						if(is_array($albumlist)) {
-							foreach($albumlist as $album) {
-								if ($_POST['act_album'] == $album->id) $selected = 'selected="selected" ';
-								else $selected = '';
+						if( is_array($this->albums) ) {
+							foreach($this->albums as $album) {
+								$selected = ($this->currentID == $album->id) ? 'selected="selected" ' : '';
 								echo '<option value="'.$album->id.'" '.$selected.'>'.$album->name.'</option>'."\n";
 							}
 						}
 					?>
 				</select>
-				<?php if ($albumID > 0){ ?>
+				<?php if ($this->currentID > 0){ ?>
 					<input class="button-primary action" type="submit" name="update" value="<?php _e('Update', 'nggallery') ?>"/>
 					<input type="submit" name="delete" class="button-secondary action" value="<?php _e('Delete', 'nggallery') ?>" onclick="javascript:check=confirm('<?php _e('Delete album ?','nggallery'); ?>');if(check==false) return false;"/>
 				<?php } else { ?>
 					<span><?php _e('Add new album', 'nggallery') ?>&nbsp;</span>
 					<input class="search-input" id="newalbum" name="newalbum" type="text" value="" />			
-					<input class="button-secondary action" type="submit" name="update" value="<?php _e('Add', 'nggallery') ?>"/>
+					<input class="button-secondary action" type="submit" name="add" value="<?php _e('Add', 'nggallery') ?>"/>
 				<?php } ?>	
 			</div>
 		</div>
 	</form>
-	<br class="clear"/>
-	<div>
-	<div style="float:right;">
-	  <a href="#" id="toggle_used"><?php _e('[Show all]', 'nggallery') ?></a>
-	| <a href="#" id="all_max"><?php _e('[Maximize]', 'nggallery') ?></a>
-	| <a href="#" id="all_min"><?php _e('[Minimize]', 'nggallery') ?></a>
-	</div>
-	<?php _e('After you create and select a album, you can drag and drop a gallery into your album below','nggallery'); ?>
-	</div>
-
+	
 	<br class="clear"/>
 	
+	<div>
+		<div style="float:right;">
+		  <a href="#" id="toggle_used"><?php _e('[Show all]', 'nggallery') ?></a>
+		| <a href="#" id="all_max"><?php _e('[Maximize]', 'nggallery') ?></a>
+		| <a href="#" id="all_min"><?php _e('[Minimize]', 'nggallery') ?></a>
+		</div>
+		<?php _e('After you create and select a album, you can drag and drop a gallery or another album into your new album below','nggallery'); ?>
+	</div>
+
+	<br class="clear" />
+	
 	<div class="container">
-		<div id="selectContainer" class="groupWrapper">
-		<h3><?php _e('Select Gallery', 'nggallery') ?></h3>
-		<?php
-		$gallerylist = $wpdb->get_results("SELECT gid FROM $wpdb->nggallery");
 		
-		//TODO:Code MUST be optimized, how to flag a used gallery better ?
-		$used_list = getallusedgalleries();
-		
-		if(is_array($gallerylist)) {
-			if ( $albumID == 0 ) {
-				foreach($gallerylist as $gallery) {
-					if (in_array($gallery->gid,$used_list))
-						getgallerycontainer($gallery->gid,true);
-					else
-						getgallerycontainer($gallery->gid,false);
+		<!-- /#album container -->
+		<div class="sidebar-right">
+			<div class="sidebar-name">
+				<h3><?php _e('Select album', 'nggallery'); ?></h3>
+			</div>
+			<div id="albumContainer" class="widget-holder">
+			<?php 
+			if( is_array( $this->albums ) ) {
+				foreach($this->albums as $album) {
+					$this->get_container('a' . $album->id);
 				}
-			} else {
-				$sortorder = $wpdb->get_var("SELECT sortorder FROM $wpdb->nggalbum WHERE id = '$albumID'");
-				$sort_array = unserialize($sortorder);
-				// if something went wrong, initialize to empty array
-				if (!is_array($sort_array)) $sort_array = array();
-				foreach($gallerylist as $gallery) {
-					if (!in_array($gallery->gid, $sort_array)) {
-						if (in_array($gallery->gid,$used_list))
-							getgallerycontainer($gallery->gid,true);
-						else
-							getgallerycontainer($gallery->gid,false);
-					}
+			}
+		?> 
+			</div>			
+		</div>
+		
+		<!-- /#select container -->
+		<div class="sidebar-right">
+			<div class="sidebar-name">
+				<h3><?php _e('Select gallery', 'nggallery'); ?></h3>
+			</div>
+			<div id="selectContainer" class="widget-holder">
+		<?php
+		
+		if( is_array( $this->galleries ) ) {
+			//get the array of galleries	
+			$sort_array = (array) $this->albums[$this->currentID]->galleries;
+			foreach($this->galleries as $gallery) {
+				if (!in_array($gallery->gid, $sort_array)) {
+					if (in_array($gallery->gid,$used_list))
+						$this->get_container($gallery->gid,true);
+					else
+						$this->get_container($gallery->gid,false);
 				}
 			}
 		}
 		?>
-		</div><!-- /#select container -->
+			</div>
+		</div>
+		
+		<!-- /#target-album -->
+		<div class="target-album">
 
-		<div id="galleryContainer" class="groupWrapper">
 		<?php
-			if ($_POST['act_album'] > 0){			
-				$act_album = $_POST['act_album'];
-				$album = $wpdb->get_row("SELECT * FROM $wpdb->nggalbum WHERE id = '$act_album'");
-				echo '<h3>'.__('Album Page ID', 'nggallery').' '.$album->id.' : '.$album->name.'</h3>'."\n";
-				if (!empty($album->sortorder)) {
-					$sort_array = unserialize($album->sortorder);
-					if (is_array($sort_array)) {
-						foreach($sort_array as $galleryid) {
-							getgallerycontainer($galleryid, false);
-						}
-					}
+			if ($this->currentID > 0){			
+				$album = $this->albums[$this->currentID];
+				?>
+				<div class="sidebar-name">
+					<h3><?php _e('Album ID', 'nggallery');  ?> <?php echo $album->id . ' : ' .$album->name; ?> </h3>
+				</div>
+				<div id="galleryContainer" class="widget-holder target">
+				<?php
+				$sort_array = (array) $this->albums[$this->currentID]->galleries;
+				foreach($sort_array as $galleryid) {
+					$this->get_container($galleryid, false);
 				}
 			} 
 			else
 			{	
-				echo '<h3>'.__('No album selected!', 'nggallery').'</h3>';
+				?>
+				<div class="sidebar-name">
+					<h3><?php _e('No album selected!', 'nggallery'); ?></h3>
+				</div>
+				<div class="widget-holder target">
+				<?php
 			}
 		?> 
-		</div><!-- /#gallery container -->
+			</div>
+		</div><!-- /#target-album -->
 
 	</div><!-- /#container -->
 </div><!-- /#wrap -->
 
 <?php
-}
-function getgallerycontainer($galleryid = 0, $used = false) {
-	global $wpdb;
-	
-	$gallery = $wpdb->get_row("SELECT * FROM $wpdb->nggallery WHERE gid = '$galleryid'");
-	
-	if ($gallery) {
-
-		// set image url
-		$act_thumbnail_url 	= get_option ('siteurl') . '/' .$gallery->path . nggGallery::get_thumbnail_folder($gallery->path, FALSE);
 		
-		// get the post name
-		$post= get_post($gallery->pageid);
-		$pagename = ($post == null) ? '' : $post->post_title;	
-		$filename = $wpdb->get_var("SELECT filename FROM $wpdb->nggpictures WHERE pid = '$gallery->previewpic'");
-		$img =  ($filename) ? '<img src="'.$act_thumbnail_url. 'thumbs_' .$filename.'" />' : '';
+	}
+	
+	/**
+	 * Create the album or gallery container
+	 * 
+	 * @param integer $id (the prefix 'a' indidcates that you look for a album 
+	 * @param bool $used (object will be hidden)
+	 * @return $output
+	 */
+	function get_container($id = 0, $used = false) {
+		global $wpdb, $nggdb;
+		
+		$obj =  array();
+		
+		// if the id started with a 'a', then it's a sub album
+		if (substr( $id, 0, 1) == 'a') {
+			
+			if ( !$album = $this->albums[ substr( $id, 1) ] )
+				return;
+				
+			$obj['id']   = $album->id;
+			$obj['name'] = $obj['title'] = $album->name;
+			$obj['pagenname'] = '---';
+			$class = 'album_obj';
+			$preview_image = '';
+			// this indicates that we have a album container
+			$prefix = 'a';
+		
+		} else {
+			if ( !$gallery = $nggdb->find_gallery( $id ) )
+				return;
+
+			$obj['id']    = $gallery->gid;
+			$obj['name']  = $gallery->name;
+			$obj['title'] = $gallery->title;
+		
+			// get the post name
+			$post= get_post($gallery->pageid);
+			$obj['pagenname'] = ($post == null) ? '' : $post->post_title;	
+
+			// set image url
+			$act_thumbnail_url 	= get_option ('siteurl') . '/' .$gallery->path . nggGallery::get_thumbnail_folder($gallery->path, FALSE);
+			$filename = $wpdb->get_var("SELECT filename FROM $wpdb->nggpictures WHERE pid = '$gallery->previewpic'");
+			$preview_image =  ($filename) ? '<div class="inlinepicture"><img src="'.$act_thumbnail_url. 'thumbs_' .$filename.'" /></div>' : '';
+			$prefix = '';
+		}
+
 		// add class if it's in use in other albums
-		$used = $used ? ' inUse' : '';
-		echo '<div id="gid-'.$gallery->gid.'" class="groupItem'. $used .'">
+		$used = $used ? ' inUse' : '';		
+		
+		echo '<div id="gid-' . $prefix . $obj['id'] . '" class="groupItem' . $used . '">
 				<div class="innerhandle">
-					<div class="item_top">
+					<div class="item_top ' . $class . '">
 						<a href="#" class="min" title="close">[-]</a>
-						ID: '.$gallery->gid.' || Title: '.nggGallery::i18n($gallery->title).'
+						ID: ' . $obj['id'] . ' | ' . nggGallery::i18n( $obj['title'] ) . '
 					</div>
 					<div class="itemContent">
-						<div class="inlinepicture">'.$img.'</div>
-							<p><strong>'.__('ID', 'nggallery').' : </strong>'.$gallery->gid.'</p>
-							<p><strong>'.__('Name', 'nggallery').' : </strong>'.nggGallery::i18n($gallery->name).'</p>
-							<p><strong>'.__('Title', 'nggallery').' : </strong>'.nggGallery::i18n($gallery->title).'</p>
-							<p><strong>'.__('Page', 'nggallery').' : </strong>'.nggGallery::i18n($pagename).'</p>
+							' . $preview_image . '
+							<p><strong>' . __('Name', 'nggallery') . ' : </strong>' . nggGallery::i18n( $obj['name'] ) . '</p>
+							<p><strong>' . __('Title', 'nggallery') . ' : </strong>' . nggGallery::i18n( $obj['title'] ) . '</p>
+							<p><strong>' . __('Page', 'nggallery'). ' : </strong>' . nggGallery::i18n( $obj['pagenname'] ) . '</p>
 						</div>
 				</div>
 			   </div>'; 
 	}
-}
-
-//get all used galleries form all albums
-function getallusedgalleries() {
-	global $wpdb;
 	
-	$albumids = $wpdb->get_col("SELECT id FROM $wpdb->nggalbum");
-	$used = array();
-	
-	if ($albumids) {
-		foreach($albumids as $albumid) {
-			$sortorder = $wpdb->get_var("SELECT sortorder FROM $wpdb->nggalbum WHERE id = '$albumid'");
-			if (!empty($sortorder)) {
-				$sort_array = unserialize($sortorder);
+	/**
+	 * get all used galleries from all albums
+	 * 
+	 * @return array $used_galleries_ids
+	 */
+	function get_used_galleries() {
+		
+		$used = array();
+		
+		if ($this->albums) {
+			foreach($this->albums as $key => $value) {
+				$sort_array = $this->albums[$key]->galleries;
 				foreach($sort_array as $galleryid) {
-					if (!in_array($galleryid,$used))
+					if (!in_array($galleryid, $used))
 						$used[] = $galleryid;
 				}
 			}
 		}
+		
+		return $used;
 	}
-	return $used;
+
+	/**
+	 * PHP5 style destructor
+	 *
+	 * @return bool Always true
+	 */
+	function __destruct() {
+		return true;
+	}
+	
 }
 ?>
